2024/09/13 fix some layout issues

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -368,7 +368,7 @@
   }
 }
 
-.separater {
+.separator {
   width: 2px;
   height: 1.2rem;
   background-color: #8c8c8c;
